network-policies/v3-checkout-egress/allow-checkout-egress.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: checkout-egress
  namespace: default
spec:
  podSelector:
    matchLabels:
      app: checkoutservice
  policyTypes:
  - Egress
  egress:
  - to:
    - podSelector:
        matchLabels:
          app: cartservice
    ports:
    - protocol: TCP
      port: 7070
  - to:
    - podSelector:
        matchLabels:
          app: emailservice
    ports:
    - protocol: TCP
      port: 5000
  - to:
    - podSelector:
        matchLabels:
          app: paymentservice
    ports:
    - protocol: TCP
      port: 50051
  - to:
    - podSelector:
        matchLabels:
          app: shippingservice
    ports:
    - protocol: TCP
      port: 50051
  - to:
    - podSelector:
        matchLabels:
          app: productcatalogservice
    ports:
    - protocol: TCP
      port: 3550
  - to:
    - podSelector:
        matchLabels:
          app: currencyservice
    ports:
    - protocol: TCP
      port: 7000
